First Commit of My Personal Website

--- a/index.html
+++ b/index.html
@@ -17,6 +17,17 @@
 
 <body>
     <!--! === HEADER === -->
+    <header class="header">
+        <nav class="navbar container">
+            <a href="./index.html" class="navbar_logo">
+                <img src="./assets/images/logo.svg" alt="" class="navbar_logo-img">
+            </a>
+            <div class="navbar_menu">
+                
+            </div>
+        </nav>
+    </header>
+
     <!--
         <svg width="19" height="14" viewBox="0 0 19 14" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M10.3333 0.999999L0.999918 1" stroke="#fff" stroke-width="2" stroke-linecap="round"
