--- a/index.html
+++ b/index.html
@@ -73,9 +73,86 @@
             </div>
         </section>
         <!--! === PORTFOLIO === -->
+        <section class="portfolio" id="portfolio">
+            <div class="portfolio_container container">
+                <div class="portfolio_metadata section-metadata">
+                    <h2 class="title">My Works</h2>
+                </div>
+                <div class="swiper myswiper">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <img src="https://source.unsplash.com/500x500" alt="">
+                        </div>
 
+                        <div class="swiper-slide">
+                            <img src="https://source.unsplash.com/501x501" alt="">
+                        </div>
+
+                        <div class="swiper-slide">
+                            <img src="https://source.unsplash.com/502x502" alt="">
+                        </div>
+
+                        <div class="swiper-slide">
+                            <img src="https://source.unsplash.com/503x503" alt="">
+                        </div>
+
+                        <div class="swiper-slide">
+                            <img src="https://source.unsplash.com/504x504" alt="">
+                        </div>
+
+                        <div class="swiper-slide">
+                            <img src="https://source.unsplash.com/505x505" alt="">
+                        </div>
+
+                        <div class="swiper-slide">
+                            <img src="https://source.unsplash.com/506x506" alt="">
+                        </div>
+
+                        <div class="swiper-slide">
+                            <img src="https://source.unsplash.com/507x507" alt="">
+                        </div>
+
+                        <div class="swiper-slide">
+                            <img src="https://source.unsplash.com/508x508" alt="">
+                        </div>
+
+                        <div class="swiper-slide">
+                            <img src="https://source.unsplash.com/509x509" alt="">
+                        </div>
+                    </div>
+                    <div class="swiper-pagination"></div>
+                </div>
+            </div>
+        </section>
         <!--! === SERVICES === -->
-
+        <section class="services" id="services">
+            <div class="services_container container">
+                <div class="services_metadata section-metadata">
+                    <h2 class="title">Services that I provide</h2>
+                    <p class="section-metadata_description">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                        Laudantium dolore sint aliquid! Placeat at omnis dolore eligendi eveniet voluptatibus ipsa,
+                        quia sequi accusantium facilis? Nam nesciunt labore facere nemo fuga!
+                    </p>
+                </div>
+                <div class="services_image-wraper">
+                    <img src="./assets/images/cris_paul.png" alt="">
+                </div>
+                <div class="services_list">
+                    <div class="services_list-divider">
+                        <article class="services_list-item">
+                            <i class="ri-camera-line services_list-icon"></i>
+                            <h3 class="services_list-title title">Photography</h3>
+                            <p class="services_list-description">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente modi rem beatae
+                                corporis!
+                                Cumque assumenda sapiente quidem fcupiditate exercitationem.
+                            </p>
+                        </article>
+                    </div>
+                </div>
+            </div>
+        </section>
         <!--! === ABOUT === -->
 
         <!--! === BLOG === -->
