Committing modified files

--- a/index.html
+++ b/index.html
@@ -149,13 +149,69 @@
                                 Cumque assumenda sapiente quidem fcupiditate exercitationem.
                             </p>
                         </article>
+                        <article class="services_list-item">
+                            <i class="ri-vidicon-2-line services_list-icon"></i>
+                            <h3 class="services_list-title title">Videography</h3>
+                            <p class="services_list-description">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente modi rem beatae
+                                corporis!
+                                Cumque assumenda sapiente quidem fcupiditate exercitationem.
+                            </p>
+                        </article>
                     </div>
+                    <article class="services_list-item">
+                        <i class="ri-flight-takeoff-line services_list-icon"></i>
+                        <h3 class="services_list-title title">Aerial Photography</h3>
+                        <p class="services_list-description">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente modi rem beatae
+                            corporis!
+                            Cumque assumenda sapiente quidem fcupiditate exercitationem.
+                        </p>
+                    </article>
                 </div>
             </div>
         </section>
         <!--! === ABOUT === -->
-
+        <section class="about" id="aboutme">
+            <div class="about_container container">
+                <div class="about_information">
+                    <h2 class="about_information-title title">About Cris Paul</h2>
+                    <p class="about_information-description">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum porro, illum,
+                        ad mollitia quae blanditiis iusto possimus
+                        deleniti inventore laboriosam maiores aliquam, ratione eaque assumenda expedita error.
+                        Voluptatum, aliquid tenetur?
+                    </p>
+                    <p class="about_information-description">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum porro, illum,
+                        ad mollitia quae blanditiis iusto possimus
+                        deleniti inventore laboriosam maiores aliquam, ratione eaque assumenda expedita error.
+                        Voluptatum, aliquid tenetur?
+                    </p>
+                    <a href="#" class="btn btn--text btn-green">Learn more</a>
+                </div>
+                <div class="about_images">
+                    <img src="./assets/images/about_image_top.png" alt=""
+                        class="about_images-image about_images-image--top">
+                    <img src="./assets/images/about_image_bottom.png" alt=""
+                        class="about_images-image about_images-image--bottom">
+                </div>
+            </div>
+        </section>
         <!--! === BLOG === -->
+        <section class="blog" id="blog">
+            <div class="blog_container container">
+                <div class="blog_metadata section-metadata">
+                    <h2 class="title">Latest blog posts</h2>
+                    <p class="blog_metadata-description section-metadata_description">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                        Laudantium dolore sint aliquid! Placeat at omnis dolore eligendi eveniet voluptatibus ipsa,
+                        quia sequi accusantium facilis? Nam nesciunt labore facere nemo fuga!
+                    </p>
+                    <a href="#" class="btn btn--text btn--transparent">View all posts</a>
+                </div>
+            </div>
+        </section>
     </main>
     <!--! === FOOTER === -->
 
