Committing modified files

--- a/index.html
+++ b/index.html
@@ -210,6 +210,22 @@
                     </p>
                     <a href="#" class="btn btn--text btn--transparent">View all posts</a>
                 </div>
+                <article class="blog_post post--right">
+                    <picture class="blog_post-image">
+                        <source media="(450px)" srcset="./assets/images/blog_post_1.png">
+                        <img src="./assets/images/blog_post_1_small.png" alt="">
+                    </picture>
+                    <h3 class="blog_post-title title">Sample title</h3>
+                    <a href="#" class="btn btn--text btn--transparent">Read more</a>
+                </article>
+                <article class="blog_post post--left">
+                    <picture class="blog_post-image">
+                        <source media="(450px)" srcset="./assets/images/blog_post_2.png">
+                        <img src="./assets/images/blog_post_2_small.png" alt="">
+                    </picture>
+                    <h3 class="blog_post-title title">Sample title</h3>
+                    <a href="#" class="btn btn--text btn--transparent">Read more</a>
+                </article>
             </div>
         </section>
     </main>
