Committing modified files

--- a/index.html
+++ b/index.html
@@ -230,7 +230,43 @@
         </section>
     </main>
     <!--! === FOOTER === -->
-
+    <footer class="footer">
+        <div class="footer_container container">
+            <div class="footer_group">
+                <h2 class="footer_title title title-main">looking for a professional photographer?</h2>
+                <a href="mailto:someone@domain.com" class="btn btn--text btn--transparent">Read more</a>
+            </div>
+            <span class="footer_separator"></span>
+            <div class="footer_group">
+                <a href="./index.html" class="footer_logo">
+                    <img src="./assets/images/logo.svg" alt="">
+                </a>
+                <p class="footer_description">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit magni qui voluptates temporibus
+                    eveniet debitis quia aliquid
+                    corrupti nesciunt nulla consequuntur, quo dolor quae, deleniti dolorem neque, veritatis nihil eos?
+                </p>
+                <ul class="footer_list">
+                    <li class="footer_list-item">
+                        <a href="#" class="footer_list-link">
+                            <i class="ri-twitter-line"></i>
+                        </a>
+                    </li>
+                    <li class="footer_list-item">
+                        <a href="#" class="footer_list-link">
+                            <i class="ri-dribbble-line"></i>
+                        </a>
+                    </li>
+                    <li class="footer_list-item">
+                        <a href="#" class="footer_list-link">
+                            <i class="ri-github-line"></i>
+                        </a>
+                    </li>
+                </ul>
+                <span class="footer_copyright">&copy; Cris Paul 2022. All rights reserved.</span>
+            </div>
+        </div>
+    </footer>
     <!-- SWIPERJS -->
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
     <script src="./assets/js/app.js"></script>
